새로운 파일 추가

--- a/week2_numpy_exercise.ipynb
+++ b/week2_numpy_exercise.ipynb
@@ -28,7 +28,8 @@
    },
    "outputs": [],
    "source": [
-    "# code"
+    "# code\n",
+    "print(\"hello\")"
    ]
   },
   {
@@ -112,7 +113,8 @@
    },
    "outputs": [],
    "source": [
-    "# code"
+    "# code\n",
+    "print('hello')"
    ]
   }
  ],
